upgraded to JDK17, added cool db -> spec -> graphql test